--- a/package.json
+++ b/package.json
@@ -15,6 +15,11 @@
     "hardhat": "^2.19.2"
   },
   "dependencies": {
-    "@nomicfoundation/hardhat-toolbox-viem": "^2.0.0"
+    "@chainlink/contracts": "^0.8.0",
+    "@chainlink/env-enc": "^1.0.5",
+    "@nomicfoundation/hardhat-toolbox-viem": "^2.0.0",
+    "@openzeppelin/contracts": "^5.0.1",
+    "axios": "^1.6.2",
+    "dotenv": "^16.3.1"
   }
 }
